--- a/assets/css/stile.css
+++ b/assets/css/stile.css
@@ -38,6 +38,58 @@ header h2{
 
 /* MAIN */
 
+main{
+    padding: 0px 15px 0px 15px ;
+}
+
 /* ELEMENTI NEL MAIN */
+
+div h2{
+    font-size: 30px;
+    text-transform: uppercase;
+    color: #247794;
+    padding: 10%;
+    font-weight: 500;
+    text-align: center;
+}
+
+h3{
+    font-size: 25px;
+    padding: 20px 0px;
+    font-weight: 500;
+}
+
+p{
+    font-size: 20px;
+    line-height: 30px;
+}
+b{
+    font-weight: 600;
+}
+figure img{
+    align-items: center;
+    border: solid rgba(0, 0, 0, 0.5) 1px;
+    text-align: center;
+}
+figcaption{
+    font-size: 22px;
+    text-align: center;
+    padding: 10px 0px;
+
+}
+
+address{
+    font-size: 22px;
+    padding: 30px 0px;
+}
+
+img{
+    padding: 5px;
+}
+
+a{
+    color: #c95865;
+}
+
 
 /* FOOTER */
