--- a/assets/css/stile.css
+++ b/assets/css/stile.css
@@ -6,7 +6,9 @@ body{
 hr{
     border: solid 4px;
     border-color: #247794; 
-    margin: 0;
+    margin: 0px ;
+
+
 }
 
 /* HEADER */
@@ -39,24 +41,27 @@ header h2{
 /* MAIN */
 
 main{
-    padding: 0px 15px 0px 15px ;
+    padding: 0px 20px 0px 20px ;
 }
 
 main hr{
     border: dashed 1px;
     border-color: #2c2c2c; 
-    margin-top: 60px;
+    /* margin-top: 50px; */
 }
 
 /* ELEMENTI NEL MAIN */
 
 div h2{
+    margin: 30px 5px 35px 5px;
+    text-align: center;
     font-size: 30px;
+    font-weight: 500;
     text-transform: uppercase;
     color: #247794;
-    padding: 10%;
-    font-weight: 500;
-    text-align: center;
+    
+    
+    
 }
 
 h3{
@@ -65,18 +70,36 @@ h3{
     font-weight: 500;
 }
 
-p{
+p, ul{
+    padding-bottom: 50px;
     font-size: 22px;
-    line-height: 30px;
+    line-height: 35px;
+    font-family: Helvetica, Arial,  sans-serif;
+    font-weight: 300;
 }
+
+/* section p{
+    padding-bottom: 0px;
+} */
+
 b{
     font-weight: 600;
 }
+
+strong{
+    color: #247794;
+}
+
 figure img{
-    align-items: center;
     border: solid rgba(0, 0, 0, 0.5) 1px;
     text-align: center;
 }
+
+figure{
+    
+    text-align: center;
+}
+
 figcaption{
     font-size: 22px;
     text-align: center;
@@ -91,6 +114,7 @@ address{
 
 img{
     padding: 5px;
+    
 }
 
 a{
@@ -100,10 +124,11 @@ a{
 mark{
     color: white;
     background-color: #247794;
+    font-weight: 300;
 }
 
 blockquote{
-    margin-top: 30px;
+    margin: 30px;
     font-family: Helvetica, Arial, sans-serif;
     padding: 35px;
     text-align: center;
@@ -118,5 +143,29 @@ blockquote p{
     font-size: 20px;
 }
 
+ul{
+    font-size: 22px;
+    line-height: 35px;
+    padding: 35px 0px 0px 50px;
+}
+
+dl{
+    font-size: 22px;
+    line-height: 35px;
+    padding-bottom: 80px;
+}
+
+dd{
+    font-size: 22px;
+    line-height: 35px;
+    padding-left: 35px;
+}
 
 /* FOOTER */
+
+footer{
+    background-color: #363636;
+    color: white;
+    text-align: center;
+    padding: 20px;
+}
