--- a/assets/css/stile.css
+++ b/assets/css/stile.css
@@ -47,21 +47,18 @@ main{
 main hr{
     border: dashed 1px;
     border-color: #2c2c2c; 
-    /* margin-top: 50px; */
+    margin-top: 50px;
 }
 
 /* ELEMENTI NEL MAIN */
 
 div h2{
-    margin: 30px 5px 35px 5px;
+    margin: 50px 5px 35px 5px;
     text-align: center;
     font-size: 30px;
     font-weight: 500;
     text-transform: uppercase;
     color: #247794;
-    
-    
-    
 }
 
 h3{
@@ -71,16 +68,11 @@ h3{
 }
 
 p, ul{
-    padding-bottom: 50px;
     font-size: 22px;
     line-height: 35px;
     font-family: Helvetica, Arial,  sans-serif;
     font-weight: 300;
 }
-
-/* section p{
-    padding-bottom: 0px;
-} */
 
 b{
     font-weight: 600;
@@ -91,8 +83,8 @@ strong{
 }
 
 figure img{
-    border: solid rgba(0, 0, 0, 0.5) 1px;
-    text-align: center;
+    border: solid #d7d7d7 1px;
+    padding: 15px;
 }
 
 figure{
@@ -104,12 +96,15 @@ figcaption{
     font-size: 22px;
     text-align: center;
     padding: 10px 0px;
+    font-family: Arial, Helvetica, sans-serif;
 
 }
 
 address{
     font-size: 22px;
     padding: 30px 0px;
+    font-family: Arial, Helvetica, sans-serif;
+
 }
 
 img{
@@ -128,9 +123,9 @@ mark{
 }
 
 blockquote{
-    margin: 30px;
+    margin-top: 30px;
     font-family: Helvetica, Arial, sans-serif;
-    padding: 35px;
+    padding: 25px;
     text-align: center;
     background-color: #e3e3e3;
     border-radius: 20px;
